service-mesh/istio/ica/2_traffic_management/ex3-tcp-traffic-shifting/02-gateway-api-tcp-echo-20-v2.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: tcp-echo
spec:
  parentRefs:
  - name: tcp-echo-gateway
    sectionName: tcp-31400
  rules:
  - backendRefs:
    - name: tcp-echo-v1
      port: 9000
      weight: 80
    - name: tcp-echo-v2
      port: 9000
      weight: 20
